# retrorecon

./: .gitattributes  .gitignore  .stylelintrc.json  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RetroRecon MCP Setup Guide.md  STYLE_GUIDE.md  aggregate_domains.py  app.py  audit_css.py  config.py  config_summary.py  database.py  demo_data.json  fetching.html  generate_style_report.py  import_progress.json  index.html  indexBack.html  indexBack2.html  init_db.py  launch_app.bat  launch_app.sh  launch_app_singlevenv.bat  launch_config.example.json  loginqa-schema.sql  manual_test_mcp.py  mcp_cli.py  mcp_manager.py  mcp_servers.json  mcp_servers.json.example  package.json  pyproject.toml  report.json  requirements.txt  retrorecon.postman.json  sample_test.har  (+8 more)
.github/: generate_tests.prompt.md
db/: schema.sql
docs/: CHANGELOG.md  GITHUB_ACTIONS_OPTIMIZATION_GUIDE_Version2.md  SQLite MCP Server Integration Guide for RetroRecon.md  api_routes.md  architecture_overview.md  css_inventory.md  dag_explorer_spec.md  dagdotdev_porting_plan.md  dagdotdev_porting_prd.md  database_erd.md  db_workflow_plan.md  debugging_style_guide.md  dropdown_style_audit.md  happy-path-api.yaml  html-container-reg-k8s.txt  jwt_tools_spec.md  mcp-gotchas.md  mcp_management.md  mcp_management_system.md  mcp_setup_guide.md  mcp_troubleshooting.md  menu_mapping.md  new_user_guide.md  notes_feature_plan.md  oci_explorer_project_tasks.md  oci_explorer_user_journey.md  oci_registry_table_project_tasks.md  oci_registry_table_spec.md  oic_explorer_user_journey.md  site2zip_spec.md  (+11 more)
(+590 files in other folders)
